--- a/src/features/system/layout/components/header/SystemHeader.css
+++ b/src/features/system/layout/components/header/SystemHeader.css
@@ -24,6 +24,8 @@
   width: 100%;
   font-size: 16px;
   background-color: #ffeab7;
+  padding: 16px;
+  border-bottom: 10px solid #f7f6f2;
 }
 
 .fixed {
